Checkpoint commit. Code from last nights dataset, before I try to speed everything up by using DataOutput instead of ObjectOutput.